Update Stochastic Program model and add result post-processing

--- a/test_SP.ipynb
+++ b/test_SP.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import numpy as np"
+    "import random\n",
+    "import numpy as np\n",
+    "import warnings"
    ]
   },
   {
@@ -48,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_dir = os.path.join('data','processed')"
+    "from configs.config import *"
    ]
   },
   {
@@ -60,7 +62,7 @@
     "# create test scenario data\n",
     "\n",
     "ts_dict = {\n",
-    "    'load_level': 3e5,\n",
+    "    'load_level': 2.5e5,\n",
     "    'wind_year': 2010,\n",
     "    'solar_year': 2010,\n",
     "    'price_year': 2023,\n",
@@ -105,8 +107,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scenario = ScenarioData(ts_dict, cost_dict, storage_dict)\n",
-    "scenario.load_timeseries(dataset_dir)"
+    "scenarios = []\n",
+    "random.seed(42)\n",
+    "for m in range(1):\n",
+    "    ts_dict['wind_year'] = random.choice(wind_years)\n",
+    "    ts_dict['solar_year'] = random.choice(solar_years)\n",
+    "    scenario = ScenarioData(ts_dict, cost_dict, storage_dict)\n",
+    "    scenario.load_timeseries(dataset_dir)\n",
+    "    scenarios.append(scenario)"
    ]
   },
   {
@@ -120,9 +128,11 @@
     "    'initial_SoC':0.5,\n",
     "    'max_storage_cap':1e9, # slack bound\n",
     "    'N_technologies': 2,\n",
+    "    'allow_elec_purchase': True,\n",
     "    'grid_capacity': 500e3, # kW\n",
     "    'capex_budget': 10e9/20, # €/yr\n",
     "    'solar_capacity_limit': 500e3, # kWp\n",
+    "    #'technologies_to_use': ['li-ion'],\n",
     "}"
    ]
   },
@@ -132,7 +142,7 @@
    "source": [
     "Note:\n",
     "1. You need to be careful that the capex budget is sufficiently large to allow the purchase of enough generation capacity to satisfy the plant demand\n",
-    "2. The solar capacity limit is needed to make sure that the optimised solar capacity is not infeasibly large due to land area"
+    "2. The solar capacity limit is needed to make sure that the optimised solar capacity is not infeasibly large due to land area, solar PV is approx 1kWp/m2"
    ]
   },
   {
@@ -142,7 +152,10 @@
    "outputs": [],
    "source": [
     "model = EnergyModel()\n",
-    "model.generate_SP([scenario],settings)"
+    "with warnings.catch_warnings():\n",
+    "    # filter pandas warnings, `DeprecationWarning: np.find_common_type is deprecated.`\n",
+    "    warnings.simplefilter(\"ignore\", category=FutureWarning)\n",
+    "    model.generate_SP(scenarios,settings)"
    ]
   },
   {
@@ -152,7 +165,7 @@
    "outputs": [],
    "source": [
     "env = get_Gurobi_WLS_env(silence=False)\n",
-    "model.model.solve(env=env)"
+    "model.solve(env=env)"
    ]
   },
   {
@@ -161,16 +174,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(scenario.load@scenario.elec_prices)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(model.model.objective)"
+    "print(model.model.objective)\n",
+    "print(model.scenarios[0].load @ model.scenarios[0].elec_prices)\n",
+    "print(model.corrected_objective)"
    ]
   },
   {
@@ -201,6 +207,77 @@
    "outputs": [],
    "source": [
     "print(sum([model.scen_obj_contrs[0][key] for key in ['wind','solar','storage']]).solution.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "energy_flares = model.get_flared_energy()\n",
+    "print(energy_flares['s0']['energy_dump'].sum().values)\n",
+    "print(energy_flares['s0']['generation_curtailment'].sum().values)\n",
+    "# ToDo plot energy flares against generation & electricity price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "battery_cycles = model.get_battery_cycles()\n",
+    "print(battery_cycles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.plotting import init_profile_fig, add_profile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = init_profile_fig(y_titles={'y1':'Energy flow (kWh)', 'y2':'State of Charge (kWh)', 'y3':'Price ($/kWh)'})\n",
+    "\n",
+    "fig = add_profile(fig, model.grid_energies[0].solution.values, name='Grid load')\n",
+    "fig = add_profile(fig, model.scenarios[0].norm_wind_gen*model.model.variables.wind_capacity.solution.values, name=f'Wind generation')\n",
+    "fig = add_profile(fig, model.scenarios[0].norm_solar_gen*model.model.variables.solar_capacity.solution.values, name=f'Solar generation')\n",
+    "fig = add_profile(fig, model.scenarios[0].elec_prices, name='Electricity price', yaxis='y3', visible='legendonly')\n",
+    "for i,tech in enumerate(model.techs):\n",
+    "    if model.model.variables[f'{tech}_capacity'].solution > 0:\n",
+    "        fig = add_profile(fig, getattr(model.model.variables,f'SOC_i{i}_s0').solution, name=f'{tech} SoC', yaxis=f'y2', visible='legendonly')\n",
+    "\n",
+    "#fig['layout']['xaxis'].update(range=['2000-04-24','2000-05-01'])\n",
+    "fig.write_html(f'temp_plot.html')\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = init_profile_fig(y_titles={'y1':'Energy flow (kWh)', 'y2':'State of Charge (kWh)', 'y3':'Price ($/kWh)'})\n",
+    "\n",
+    "fig = add_profile(fig, model.grid_energies[0].solution.values, name='Grid load')\n",
+    "fig = add_profile(fig, energy_flares['s0']['energy_dump'].values, name=f'Energy dumped')\n",
+    "fig = add_profile(fig, energy_flares['s0']['generation_curtailment'].values, name=f'Generation curtailment')\n",
+    "fig = add_profile(fig, model.scenarios[0].norm_wind_gen*model.model.variables.wind_capacity.solution.values + model.scenarios[0].norm_solar_gen*model.model.variables.solar_capacity.solution.values, name=f'Total generation')\n",
+    "fig = add_profile(fig, model.scenarios[0].elec_prices, name='Electricity price', yaxis='y3', visible='legendonly')\n",
+    "\n",
+    "#fig['layout']['xaxis'].update(range=['2000-04-24','2000-05-01'])\n",
+    "fig.write_html(f'temp_plot2.html')\n",
+    "fig.show()"
    ]
   },
   {
