--- a/dev/test_SP.ipynb
+++ b/dev/test_SP.ipynb
@@ -7,30 +7,18 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "os.chdir('..') # move to the root directory (from dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import random\n",
     "import numpy as np\n",
     "import warnings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import energy_model\n",
-    "import utils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import importlib\n",
-    "importlib.reload(energy_model)\n",
-    "importlib.reload(utils)"
    ]
   },
   {
@@ -108,8 +96,8 @@
    "outputs": [],
    "source": [
     "scenarios = []\n",
-    "random.seed(42)\n",
-    "for m in range(1):\n",
+    "random.seed(5)\n",
+    "for m in range(2):\n",
     "    ts_dict['wind_year'] = random.choice(wind_years)\n",
     "    ts_dict['solar_year'] = random.choice(solar_years)\n",
     "    scenario = ScenarioData(ts_dict, cost_dict, storage_dict)\n",
