Implement file IO for ScenarioData class

--- a/dev/test_SP.ipynb
+++ b/dev/test_SP.ipynb
@@ -102,7 +102,17 @@
     "    ts_dict['solar_year'] = random.choice(solar_years)\n",
     "    scenario = ScenarioData(ts_dict, cost_dict, storage_dict)\n",
     "    scenario.load_timeseries(dataset_dir)\n",
-    "    scenarios.append(scenario)"
+    "    scenarios.append(scenario)\n",
+    "    scenario.to_file(f'test_scenario_{m}.yaml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(scenarios[0])"
    ]
   },
   {
