--- a/dev/test_SP.ipynb
+++ b/dev/test_SP.ipynb
@@ -172,6 +172,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "_,_,_ = model.save_results('test_results.yaml')\n",
+    "if not os.path.exists('test_scenarios'):\n",
+    "    os.mkdir('test_scenarios')\n",
+    "model.save_scenarios('test_scenarios')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(model.model.objective)\n",
     "print(model.scenarios[0].load @ model.scenarios[0].elec_prices)\n",
     "print(model.corrected_objective)"
