Change to yaml for all experiment settings

--- a/dev/test_SP.ipynb
+++ b/dev/test_SP.ipynb
@@ -16,6 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import yaml\n",
     "import random\n",
     "import numpy as np\n",
     "import warnings"
@@ -38,7 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from configs.config import *"
+    "with open(os.path.join('configs','base_settings.yaml'), 'r') as f: settings = yaml.safe_load(f)\n",
+    "prob_settings = settings['probability_settings']"
    ]
   },
   {
@@ -98,10 +100,10 @@
     "scenarios = []\n",
     "random.seed(5)\n",
     "for m in range(2):\n",
-    "    ts_dict['wind_year'] = random.choice(wind_years)\n",
-    "    ts_dict['solar_year'] = random.choice(solar_years)\n",
+    "    ts_dict['wind_year'] = random.choice(prob_settings['wind_years'])\n",
+    "    ts_dict['solar_year'] = random.choice(prob_settings['solar_years'])\n",
     "    scenario = ScenarioData(ts_dict, cost_dict, storage_dict)\n",
-    "    scenario.load_timeseries(dataset_dir)\n",
+    "    scenario.load_timeseries(os.path.join(*settings['dataset_dir']))\n",
     "    scenarios.append(scenario)\n",
     "    scenario.to_file(f'test_scenario_{m}.yaml')"
    ]
@@ -121,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "settings = {\n",
+    "model_settings = {\n",
     "    'T':8760,\n",
     "    'initial_SoC':0.5,\n",
     "    'max_storage_cap':1e9, # slack bound\n",
@@ -131,7 +133,9 @@
     "    'capex_budget': 10e9/20, # €/yr\n",
     "    'solar_capacity_limit': 500e3, # kWp\n",
     "    #'technologies_to_use': ['li-ion'],\n",
-    "}"
+    "}\n",
+    "# OR\n",
+    "model_settings = settings['model_settings']"
    ]
   },
   {
@@ -153,7 +157,7 @@
     "with warnings.catch_warnings():\n",
     "    # filter pandas warnings, `DeprecationWarning: np.find_common_type is deprecated.`\n",
     "    warnings.simplefilter(\"ignore\", category=FutureWarning)\n",
-    "    model.generate_SP(scenarios,settings)"
+    "    model.generate_SP(scenarios,model_settings)"
    ]
   },
   {
