Implement CVaR objective contribution

--- a/dev/test_SP.ipynb
+++ b/dev/test_SP.ipynb
@@ -102,7 +102,7 @@
     "for m in range(2):\n",
     "    ts_dict['wind_year'] = random.choice(prob_settings['wind_years'])\n",
     "    ts_dict['solar_year'] = random.choice(prob_settings['solar_years'])\n",
-    "    scenario = ScenarioData(ts_dict, cost_dict, storage_dict)\n",
+    "    scenario = ScenarioData(cost_dict, ts_dict, storage_dict)\n",
     "    scenario.load_timeseries(os.path.join(*settings['dataset_dir']))\n",
     "    scenarios.append(scenario)\n",
     "    scenario.to_file(f'test_scenario_{m}.yaml')"
@@ -133,9 +133,12 @@
     "    'capex_budget': 10e9/20, # €/yr\n",
     "    'solar_capacity_limit': 500e3, # kWp\n",
     "    #'technologies_to_use': ['li-ion'],\n",
+    "    'use_CVaR': False,\n",
+    "    'CVaR_alpha': 0.1,\n",
+    "    'CVaR_beta': 1,\n",
     "}\n",
     "# OR\n",
-    "model_settings = settings['model_settings']"
+    "#model_settings = settings['model_settings']"
    ]
   },
   {
@@ -191,6 +194,28 @@
     "print(model.model.objective)\n",
     "print(model.scenarios[0].load @ model.scenarios[0].elec_prices)\n",
     "print(model.corrected_objective)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for s,s_obj in enumerate(model.scenario_objectives):\n",
+    "    print(f'Scenario {s}: {s_obj.solution.values}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if model.use_CVaR:\n",
+    "    print(model.CVaR_obj_contribution.solution)\n",
+    "    print(model.model.variables.CVaR_value_threshold.solution)\n",
+    "    print(model.model.variables.CVaR_slack.solution)"
    ]
   },
   {
