Add solve time logging to model solving

--- a/dev/test_SP.ipynb
+++ b/dev/test_SP.ipynb
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_,_,_ = model.save_results('test_results.yaml')\n",
+    "_,_,_,_ = model.save_results('test_results.yaml')\n",
     "if not os.path.exists('test_scenarios'):\n",
     "    os.mkdir('test_scenarios')\n",
     "model.save_scenarios('test_scenarios')"
@@ -343,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
