Add file for analysis results - further work needed

--- a/analysis/plot_scenario_operation.ipynb
+++ b/analysis/plot_scenario_operation.ipynb
@@ -50,7 +50,8 @@
    "outputs": [],
    "source": [
     "expt_id = 0\n",
-    "settings, base_params = get_experiment_config(expt_id)"
+    "settings, base_params = get_experiment_config(expt_id)\n",
+    "available_technologies = list(settings['probability_settings']['storage'].keys())"
    ]
   },
   {
@@ -59,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "design_fpath = os.path.join(*settings['results_dir'],'prior','CAES_design.yaml')\n",
+    "design_fpath = os.path.join(*settings['results_dir'],'prior','Li-ion_design.yaml')\n",
     "scenario_fpaths = [os.path.join(*settings['results_dir'],'scenarios','thetas','scenario_0.yaml')]"
    ]
   },
@@ -256,7 +257,7 @@
     "        fig = add_profile(fig, SOC, name=tech, yaxis=f'y2',\n",
     "                          legendgroup='soc', legendgrouptitle_text='Storage SOC',\n",
     "                          visible='legendonly',\n",
-    "                          line=dict(color=colors[i], width=3), zorder=8)\n",
+    "                          line=dict(color=colors[available_technologies.index(tech)], width=3), zorder=8)\n",
     "\n",
     "fig = add_profile(fig, solved_model.scenarios[m].elec_prices, name='Electricity price', yaxis='y3',\n",
     "                  legendgroup='other', legendgrouptitle_text='Other', visible='legendonly',\n",
@@ -323,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
