Improve operational timeseries plot

--- a/analysis/plot_scenario_operation.ipynb
+++ b/analysis/plot_scenario_operation.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expt_id = 0\n",
+    "expt_id = 1\n",
     "settings, base_params = get_experiment_config(expt_id)\n",
     "available_technologies = list(settings['probability_settings']['storage'].keys())"
    ]
@@ -60,8 +60,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "design_fpath = os.path.join(*settings['results_dir'],'prior','Li-ion_design.yaml')\n",
-    "scenario_fpaths = [os.path.join(*settings['results_dir'],'scenarios','thetas','scenario_0.yaml')]"
+    "#design_fpath = os.path.join(*settings['results_dir'],'prior','Li-ion_design.yaml')\n",
+    "design_fpath = os.path.join('results','temp_base','prior','Li-ion_design.yaml')\n",
+    "#scenario_fpaths = [os.path.join(*settings['results_dir'],'scenarios','thetas','scenario_0.yaml')]\n",
+    "scenario_fpaths = [os.path.join('results','temp_base','scenarios','thetas','scenario_0.yaml')]"
    ]
   },
   {
@@ -229,32 +231,32 @@
    "source": [
     "colors = list(mcolors.TABLEAU_COLORS.values())\n",
     "\n",
-    "fig = init_profile_fig(y_titles={'y1':'Energy flow (kWh)', 'y2':'State of Charge (kWh)', 'y3':'Price ($/kWh)'})\n",
+    "fig = init_profile_fig(y_titles={'y1':'Energy flow (MWh)', 'y2':'State of Charge (GWh)', 'y3':'Price (€/kWh)'})\n",
     "\n",
-    "fig = add_profile(fig, scenario.load[:solved_model.T], name='Plant',\n",
+    "fig = add_profile(fig, scenario.load[:solved_model.T]/1e3, name='Plant',\n",
     "                  legendgroup='load', legendgrouptitle_text='Load',\n",
     "                  line=dict(color='black', width=2.5, dash='dash'), zorder=10)\n",
-    "fig = add_profile(fig, solved_model.grid_energies[m].solution.values, name='Grid',\n",
+    "fig = add_profile(fig, solved_model.grid_energies[m].solution.values/1e3, name='Grid',\n",
     "                  legendgroup='load',\n",
     "                  line=dict(color='black', width=2.5), zorder=10)\n",
     "\n",
     "wind = solved_model.scenarios[m].norm_wind_gen*solved_model.model.variables.wind_capacity.solution.values\n",
-    "fig = add_profile(fig, wind, name=f'Wind',\n",
+    "fig = add_profile(fig, wind/1e3, name=f'Wind',\n",
     "                  legendgroup='generation', legendgrouptitle_text='Generation',\n",
     "                  line=dict(color='#0165fc', width=2.5), zorder=5)\n",
     "solar = solved_model.scenarios[m].norm_solar_gen*solved_model.model.variables.solar_capacity.solution.values\n",
-    "fig = add_profile(fig, solar, name=f'Solar',\n",
+    "fig = add_profile(fig, solar/1e3, name=f'Solar',\n",
     "                  legendgroup='generation',\n",
     "                  line=dict(color='#fac205', width=2.5), zorder=5)\n",
     "curtailment = getattr(solved_model.model.variables,f'generation_curtailment_s{m}').solution.values\n",
-    "fig = add_profile(fig, curtailment, name='Curtailment',\n",
+    "fig = add_profile(fig, curtailment/1e3, name='Curtailment',\n",
     "                  legendgroup='generation', visible='legendonly',\n",
     "                  line=dict(color='#ff000d', width=2.5), zorder=4)\n",
     "\n",
     "for i,tech in enumerate(solved_model.techs):\n",
     "    if solved_model.model.variables[f'{tech}_capacity'].solution > 0:\n",
     "        SOC = getattr(solved_model.model.variables,f'SOC_{tech}_s{m}').solution\n",
-    "        fig = add_profile(fig, SOC, name=tech, yaxis=f'y2',\n",
+    "        fig = add_profile(fig, SOC/1e6, name=tech, yaxis=f'y2',\n",
     "                          legendgroup='soc', legendgrouptitle_text='Storage SOC',\n",
     "                          visible='legendonly',\n",
     "                          line=dict(color=colors[available_technologies.index(tech)], width=3), zorder=8)\n",
@@ -262,11 +264,12 @@
     "fig = add_profile(fig, solved_model.scenarios[m].elec_prices, name='Electricity price', yaxis='y3',\n",
     "                  legendgroup='other', legendgrouptitle_text='Other', visible='legendonly',\n",
     "                  line=dict(color='#ff028d', width=2.5), zorder=12)\n",
-    "fig = add_profile(fig, solved_model.get_flared_energy()[f's{m}']['total_energy_dump'], name='Flared energy', yaxis='y',\n",
+    "fig = add_profile(fig, solved_model.get_flared_energy()[f's{m}']['total_energy_dump']/1e3, name='Flared energy', yaxis='y',\n",
     "                  legendgroup='other', visible='legendonly',\n",
     "                  line=dict(color='#be0119', width=2.5), zorder=4)\n",
     "\n",
     "fig.update_layout(legend=dict(groupclick=\"toggleitem\"))\n",
+    "fig.update_layout(hovermode=\"x\")\n",
     "\n",
     "fig.write_html(f'temp_plot.html')\n",
     "fig.show()"
