Improve post analysis - generalise to multi-tech systems

--- a/analysis/plot_VoI_conv.ipynb
+++ b/analysis/plot_VoI_conv.ipynb
@@ -26,6 +26,7 @@
    "source": [
     "import yaml\n",
     "import numpy as np\n",
+    "import itertools\n",
     "\n",
     "from configs import get_experiment_config\n",
     "\n",
@@ -51,6 +52,8 @@
     "expt_id = 1\n",
     "settings, base_params = get_experiment_config(expt_id)\n",
     "available_technologies = list(settings['probability_settings']['storage'].keys())\n",
+    "tech_combos = list(itertools.combinations(available_technologies, settings['model_settings']['N_technologies']))\n",
+    "tech_combos_strs = ['-'.join(t) for t in tech_combos]\n",
     "N = settings['probability_settings']['n_prior_samples']"
    ]
   },
@@ -66,6 +69,17 @@
     "open_results = [yaml.safe_load(open(f)) for f in open_design_results_files]\n",
     "restricted_design_results_files = [os.path.join(result_dir_path_pattern.format(z=z), 'restricted_design.yaml') for z in range(N)]\n",
     "restricted_results = [yaml.safe_load(open(f)) for f in restricted_design_results_files]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: comment on cost reduction from adding storage. (Compare cost to none design case)\n",
+    "\n",
+    "Despite a very small proportion of the budget being spent on storage, it really reduces the cost!\n",
+    "\n",
+    "A small amount of storage gives great returns on capital!"
    ]
   },
   {
@@ -99,7 +113,7 @@
    "outputs": [],
    "source": [
     "# Look at frequency of posterior optimal storage technologies\n",
-    "techs = [res['design']['storage_technologies'][0] for res in open_results]\n",
+    "techs = ['-'.join(res['design']['storage_technologies']) for res in open_results]\n",
     "counts = Counter(techs)\n",
     "print(dict(counts))"
    ]
@@ -108,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plot designs"
+    "#### Plot cost distributions"
    ]
   },
   {
@@ -126,15 +140,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig,ax = plt.subplots()\n",
+    "\n",
+    "plt.ylim(0,5.5e-3)\n",
+    "\n",
+    "for techs in tech_combos:\n",
+    "    techs_str = '-'.join(techs)\n",
+    "    design_results_files = [os.path.join(result_dir_path_pattern.format(z=z),'design_options',f'{techs_str}_design.yaml') for z in range(N)]\n",
+    "    design_results = [yaml.safe_load(open(f)) for f in design_results_files]\n",
+    "    post_costs = np.array([res['overall_objective']['overall_objective'] for res in design_results])\n",
+    "    print(f\"{techs_str}: {np.mean(post_costs)/1e6:.2f} €m\")\n",
+    "\n",
+    "    c = colors[tech_combos_strs.index(techs_str)]\n",
+    "\n",
+    "    sns.kdeplot(\n",
+    "        post_costs/1e6,\n",
+    "        ax=ax,\n",
+    "        label=techs_str,\n",
+    "        color=c,\n",
+    "        cut=0\n",
+    "    )\n",
+    "    plt.vlines(\n",
+    "        np.mean(post_costs)/1e6,\n",
+    "        0,\n",
+    "        ax.get_ylim()[1],\n",
+    "        color=c,\n",
+    "        linestyle=\"--\",\n",
+    "        alpha=0.5,\n",
+    "        zorder=1\n",
+    "    )\n",
+    "\n",
+    "plt.xlabel('Posterior expected cost (€m)')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that these pre-posterior costs are much lower than the prior costs - as expected because the system design is done with reduced uncertainty (important for budget constraint), so there is some VoI. But the interesting thing here is that given the problem structure, just doing the prior analysis leads to a significant over-estimate of expected costs! (Important for planning/financing)\n",
+    "\n",
+    "This actually motivates the way of making decisions this way (i.e. adjusting capacities after R&D, cost improvement is pretty big - quantify & discuss)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot designs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig, ax = plt.subplots()\n",
     "\n",
-    "restricted_tech = restricted_results[0]['design']['storage_technologies'][0]\n",
+    "restricted_techs = restricted_results[0]['design']['storage_technologies']\n",
+    "restricted_techs_str = '-'.join(restricted_techs)\n",
     "restricted_wind_caps = np.array([])\n",
     "restricted_storage_caps = np.array([])\n",
     "\n",
     "for res in restricted_results:\n",
     "    restricted_wind_caps = np.append(restricted_wind_caps,res['design']['wind_capacity']['value'])\n",
-    "    restricted_storage_caps = np.append(restricted_storage_caps,res['design']['storage_capacities'][restricted_tech]['value'])\n",
+    "    total_storage_cap = 0\n",
+    "    for tech in restricted_techs:\n",
+    "        total_storage_cap += res['design']['storage_capacities'][tech]['value']\n",
+    "    restricted_storage_caps = np.append(restricted_storage_caps,total_storage_cap)\n",
     "\n",
     "open_wind_caps = np.array([])\n",
     "open_techs = np.array([])\n",
@@ -142,32 +218,39 @@
     "\n",
     "for res in open_results:\n",
     "    open_wind_caps = np.append(open_wind_caps,res['design']['wind_capacity']['value'])\n",
-    "    tech = res['design']['storage_technologies'][0]\n",
-    "    open_techs = np.append(open_techs,tech)\n",
-    "    open_storage_caps = np.append(open_storage_caps,res['design']['storage_capacities'][tech]['value'])\n",
+    "    techs = res['design']['storage_technologies']\n",
+    "    open_techs = np.append(open_techs,'-'.join(techs))\n",
+    "    total_storage_cap = 0\n",
+    "    for tech in techs:\n",
+    "        total_storage_cap += res['design']['storage_capacities'][tech]['value']\n",
+    "    open_storage_caps = np.append(open_storage_caps,total_storage_cap)\n",
     "\n",
     "ax.scatter(\n",
-    "    x=restricted_wind_caps[open_techs != restricted_tech]/1e6,\n",
-    "    y=restricted_storage_caps[open_techs != restricted_tech]/1e6,\n",
-    "    c=colors[available_technologies.index(restricted_tech)],\n",
+    "    x=restricted_wind_caps[open_techs != restricted_techs_str]/1e6,\n",
+    "    y=restricted_storage_caps[open_techs != restricted_techs_str]/1e6,\n",
+    "    c=colors[tech_combos_strs.index(restricted_techs_str)],\n",
     "    alpha=0.5,\n",
     "    lw=0,\n",
     "    label='Restricted',\n",
-    "    marker='s'\n",
+    "    marker='s',\n",
+    "    s=15\n",
     ")\n",
     "\n",
-    "for tech in available_technologies:\n",
+    "for techs_str in tech_combos_strs:\n",
     "    ax.scatter(\n",
-    "        x=open_wind_caps[open_techs == tech]/1e6,\n",
-    "        y=open_storage_caps[open_techs == tech]/1e6,\n",
-    "        c=colors[available_technologies.index(tech)],\n",
-    "        label=tech\n",
+    "        x=open_wind_caps[open_techs == techs_str]/1e6,\n",
+    "        y=open_storage_caps[open_techs == techs_str]/1e6,\n",
+    "        c=colors[available_technologies.index(techs_str)],\n",
+    "        label=techs_str,\n",
+    "        s=12\n",
     "    )\n",
     "\n",
     "plt.xlabel('Wind Capacity (GW)')\n",
     "plt.ylabel('Storage Capacity (GWh)')\n",
     "\n",
-    "plt.legend()\n",
+    "lgnd = plt.legend()\n",
+    "for i in range(len(tech_combos)+1):\n",
+    "    lgnd.legendHandles[i]._sizes = [40]\n",
     "plt.show()"
    ]
   },
@@ -191,7 +274,7 @@
     "for i in range(N):\n",
     "    open_costs = np.append(open_costs,open_results[i]['overall_objective']['overall_objective'])\n",
     "    restricted_costs = np.append(restricted_costs,restricted_results[i]['overall_objective']['overall_objective'])\n",
-    "    open_techs = np.append(open_techs,open_results[i]['design']['storage_technologies'][0])\n",
+    "    open_techs = np.append(open_techs,'-'.join(open_results[i]['design']['storage_technologies']))\n",
     "\n",
     "cost_improvements = restricted_costs - open_costs\n",
     "\n",
@@ -212,6 +295,7 @@
     "    cost_improvements/1e6,\n",
     "    binrange=(0,100),\n",
     "    binwidth=5,\n",
+    "    stat='percent',\n",
     "    ax=ax,\n",
     "    color='black'\n",
     ")\n",
@@ -219,7 +303,7 @@
     "plt.xlim(0,100)\n",
     "\n",
     "plt.xlabel('Cost Improvement (EUR/yr, millions)')\n",
-    "plt.ylabel('No. of Scenarios')\n",
+    "plt.ylabel('% of Scenarios')\n",
     "\n",
     "plt.show()"
    ]
@@ -230,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(figsize=(8,4))\n",
     "\n",
     "ax.plot(\n",
     "    np.arange(1,N+1),\n",
@@ -251,11 +335,11 @@
     "    zorder=0\n",
     ")\n",
     "\n",
-    "for tech in available_technologies:\n",
+    "for techs_str in tech_combos_strs:\n",
     "    ax.scatter(\n",
-    "        x=np.arange(1,N+1)[open_techs == tech],\n",
-    "        y=cost_improvements[open_techs == tech]/1e6,\n",
-    "        label=tech,\n",
+    "        x=np.arange(1,N+1)[open_techs == techs_str],\n",
+    "        y=cost_improvements[open_techs == techs_str]/1e6,\n",
+    "        label=techs_str,\n",
     "        clip_on=False,\n",
     "        zorder=100\n",
     "    )\n",
@@ -336,7 +420,8 @@
     "        x=np.arange(1,N+1)[ordered_open_techs == tech],\n",
     "        y=ordered_cost_improvements[ordered_open_techs == tech]/1e6,\n",
     "        label=tech,\n",
-    "        clip_on=False\n",
+    "        clip_on=False,\n",
+    "        zorder=10 if tech == 'Li-ion' else 20\n",
     "    )\n",
     "\n",
     "plt.xlim(0,N+1)\n",
@@ -345,7 +430,7 @@
     "plt.xlabel('Ordered Scenarios')\n",
     "plt.ylabel('Cost Improvement (EUR, millions)')\n",
     "\n",
-    "plt.legend()\n",
+    "plt.legend(loc='upper left')\n",
     "plt.show()"
    ]
   },
@@ -373,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
