--- a/analysis/plot_scenario_operation.ipynb
+++ b/analysis/plot_scenario_operation.ipynb
@@ -60,10 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#design_fpath = os.path.join(*settings['results_dir'],'prior','Li-ion_design.yaml')\n",
-    "design_fpath = os.path.join('results','temp_base','prior','Li-ion_design.yaml')\n",
-    "#scenario_fpaths = [os.path.join(*settings['results_dir'],'scenarios','thetas','scenario_0.yaml')]\n",
-    "scenario_fpaths = [os.path.join('results','temp_base','scenarios','thetas','scenario_0.yaml')]"
+    "design_fpath = os.path.join(*settings['results_dir'],'prior','CAES_design.yaml')\n",
+    "scenario_fpaths = [os.path.join(*settings['scenarios_dir'],'thetas','scenario_0.yaml')]"
    ]
   },
   {
@@ -327,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
