Make analysis script compatible with 2techs format

--- a/analysis/plot_VoI_conv.ipynb
+++ b/analysis/plot_VoI_conv.ipynb
@@ -49,12 +49,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expt_id = 1\n",
-    "settings, base_params = get_experiment_config(expt_id)\n",
+    "expt_name = 'base'\n",
+    "settings, base_params = get_experiment_config(expt_name)\n",
     "available_technologies = list(settings['probability_settings']['storage'].keys())\n",
     "tech_combos = list(itertools.combinations(available_technologies, settings['model_settings']['N_technologies']))\n",
     "tech_combos_strs = ['-'.join(t) for t in tech_combos]\n",
     "N = settings['probability_settings']['n_prior_samples']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if settings['model_settings']['N_technologies'] == 2:\n",
+    "    colors = list(plt.cm.Dark2.colors)\n",
+    "else:\n",
+    "    colors = list(plt.cm.tab10.colors)"
    ]
   },
   {
@@ -123,15 +135,6 @@
    "metadata": {},
    "source": [
     "#### Plot cost distributions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "colors = list(mcolors.TABLEAU_COLORS.values())"
    ]
   },
   {
@@ -240,7 +243,7 @@
     "    ax.scatter(\n",
     "        x=open_wind_caps[open_techs == techs_str]/1e6,\n",
     "        y=open_storage_caps[open_techs == techs_str]/1e6,\n",
-    "        c=colors[available_technologies.index(techs_str)],\n",
+    "        c=colors[tech_combos_strs.index(techs_str)],\n",
     "        label=techs_str,\n",
     "        s=12\n",
     "    )\n",
@@ -339,6 +342,7 @@
     "    ax.scatter(\n",
     "        x=np.arange(1,N+1)[open_techs == techs_str],\n",
     "        y=cost_improvements[open_techs == techs_str]/1e6,\n",
+    "        c = colors[tech_combos_strs.index(techs_str)],\n",
     "        label=techs_str,\n",
     "        clip_on=False,\n",
     "        zorder=100\n",
@@ -404,8 +408,7 @@
     "ordered_cost_improvements = cost_improvements[np.argsort(cost_improvements)]\n",
     "ordered_open_techs = open_techs[np.argsort(cost_improvements)]\n",
     "\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(figsize=(15,5))\n",
     "\n",
     "ax.plot(\n",
     "    np.arange(0,N+2),\n",
@@ -415,11 +418,13 @@
     "    lw=2.5,\n",
     "    zorder=1\n",
     ")\n",
-    "for tech in available_technologies:\n",
+    "for techs_str in tech_combos_strs:\n",
     "    ax.scatter(\n",
-    "        x=np.arange(1,N+1)[ordered_open_techs == tech],\n",
-    "        y=ordered_cost_improvements[ordered_open_techs == tech]/1e6,\n",
-    "        label=tech,\n",
+    "        x=np.arange(1,N+1)[ordered_open_techs == techs_str],\n",
+    "        y=ordered_cost_improvements[ordered_open_techs == techs_str]/1e6,\n",
+    "        c = colors[tech_combos_strs.index(techs_str)],\n",
+    "        alpha=0.5,\n",
+    "        label=techs_str,\n",
     "        clip_on=False,\n",
     "        zorder=10 if tech == 'Li-ion' else 20\n",
     "    )\n",
