--- a/analysis/plot_dists.ipynb
+++ b/analysis/plot_dists.ipynb
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = init_profile_fig(y_titles={'y1':'Normalized Energy Generation'})\n",
+    "fig = init_profile_fig(y_titles={'y1':'Normalized energy generation (fraction of rated capacity)'})\n",
     "\n",
     "for (i,tech) in enumerate(['wind','solar']):\n",
     "    for (j,year) in enumerate(expt_settings[f'{tech}_years']):\n",
@@ -171,7 +171,7 @@
     "\n",
     "fig.update_layout(\n",
     "    legend=dict(\n",
-    "        title=\"Load year\",\n",
+    "        title=\"Data year\",\n",
     "        orientation=\"v\",\n",
     "        x=1,\n",
     "        xanchor='center',\n",
